--- a/Modulo1/s1/g3/index.html
+++ b/Modulo1/s1/g3/index.html
@@ -47,11 +47,14 @@
 <aside>
     <section>
      <p class="featuredin">FEATURED IN:</p>
-     <a href="Collegamento">Fresh Cranberry Recipes That Go Beyond Sauce</a>
 
 
+     <a class="link" href="Collegamento">Fresh Cranberry Recipes That Go Beyond Sauce</a>
+    </section>
+</aside>
 
-<div class="ingredienti">
+
+<!--Ingredienti-->
 <main>
     <section>
         <h2>Ingredients</h2>
@@ -77,19 +80,21 @@
 </div>
 
 
-<!--Lista 2-->
+<!--Method (sbagliato)-->
 <section>
      <h2>Method</h2>
 
-    <p><b>Make the focaccia dough<b></p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eaque optio velit doloremque, sequi praesentium? Sed quam dicta quis voluptatum qui fuga ipsum esse aliquam, dignissimos nostrum mollitia omnis eius?</p>
+    <p><b>1. Make the focaccia dough<b></p>
+    <p>In a medium-sized mixing bowl, or in a stand mixer with a paddle attachment, mix togheter all the dough ingredients until the flour is fully absorbed. You don't need to actually knead it a few times in the bowl when mixing by hand to incorporate the last of the flour...
+    </p>
 </section>
 </aside>
+</div>
 
 
 <!--Footer-->
 <footer>
-<p>Read more on <a href="Collegamento"> Simply recipes</a></p>
+<p>Read more on <a class="link" href="Collegamento"> Simply recipes</a></p>
 </footer>
 
 </main>
