--- a/Modulo1/s1/g5/index.html
+++ b/Modulo1/s1/g5/index.html
@@ -55,32 +55,38 @@
 <!--Aside-->
 <aside>
    <div>
-     <img src="./images/foto1.jpg" class="immagini" alt="Immaginepc">
-      <h3>Il tuo PC</h3>
+      <div class="shadow-container">
+         <img src="./images/foto1.jpg" class="immagini" alt="Immaginepc">
+         <h3>Il tuo PC</h3>
          <p class="classeparagrafo">Se vuoi diventare Developer è l'unico strumento di cui hai bisogno</p>
-    </div>
-
-    <div>
-       <img src="./images/foto2.jpg" class="immagini" alt="Immaginescura">
-       <h3>Impara ora</h3>
-          <p class="classeparagrafo">Impara da chi diventerai fra qualche anno e diventa una Rockstar come loro.</p>
-    </div> 
-
-   <div>
-       <img src="./images/foto3.jpg" class="immagini" alt="Postazionelavoro">
-       <h3>Lavora subito</h3>
-          <p class="classeparagrafo">Sappiamo cosa vogliono le aziende, perchè lavoriamo con loro</p>
-    </div> 
+      </div>
+   </div>
+<div>
+      <div class="shadow-container">
+         <img src="./images/foto2.jpg" class="immagini" alt="Immaginescura">
+         <h3>Impara ora</h3>
+         <p class="classeparagrafo">Impara da chi diventerai fra qualche anno e diventa una Rockstar come loro.</p>
+      </div>
+   </div>
+<div>
+      <div class="shadow-container">
+         <img src="./images/foto3.jpg" class="immagini" alt="Postazionelavoro">
+         <h3>Lavora subito</h3>
+         <p class="classeparagrafo">Sappiamo cosa vogliono le aziende, perchè lavoriamo con loro</p>
+      </div>
+   </div>
 </aside>
 
 
 <!--Footer-->
 <footer>
-   <h2>Contattaci</h2>
-   <p>(+39 11223456)</p>
-   <a href="mailto:info@epicode.school" title="contattami">info@epicode.school</a>
-   <address>Via Appia, 1 - 00100 Roma (RM)</address>
-   <p>&copy;Immagini di Pixabay</p>
+      <h2>Contattaci</h2>
+   <div>
+      <p><i class="fas fa-phone-alt"></i>(+39 11223456)</p>
+      <a href="mailto:info@epicode.school" title="contattami"><i class="fas fa-envelope"></i>info@epicode.school</a>
+      <address><i class="fas fa-arrow-right"></i>Via Appia, 1 - 00100 Roma (RM)</address>
+    </div>
+        <p>&copy;Immagini di Pixabay</p>
 </footer>
 
 
