--- a/Modulo1/s1/g5/index.html
+++ b/Modulo1/s1/g5/index.html
@@ -82,16 +82,11 @@
 <footer>
       <h2>Contattaci</h2>
    <div>
-      <p><i class="fas fa-phone-alt"></i>(+39 11223456)</p>
-      <a href="mailto:info@epicode.school" title="contattami"><i class="fas fa-envelope"></i>info@epicode.school</a>
-      <address><i class="fas fa-arrow-right"></i>Via Appia, 1 - 00100 Roma (RM)</address>
+      <p><i class="fas fa-phone-square-alt" style="color: #ffffff;"></i>(+39 11223456)</p>
+      <a href="mailto:info@epicode.school" title="contattami"><i class="fas fa-envelope-square" style="color: #ffffff;"></i>info@epicode.school</a>
+      <address>Via Appia, 1 - 00100 Roma (RM)</address>
     </div>
         <p>&copy;Immagini di Pixabay</p>
 </footer>
-
-
-
-
-
 </body>
 </html>
