--- a/Modulo1/s2/g5/index.html
+++ b/Modulo1/s2/g5/index.html
@@ -11,8 +11,8 @@
 <header>
 
     <!--Sezione 1 Logo Amazon-->
-    <div class="logo">
-       <img src="./assets/logo.png" />
+    <div class="logo1">
+      <img id="logoamazon" src="assets/logo.png">
     </div>
 
 
@@ -45,29 +45,30 @@
     <!--Sezione 5 Regali pt1-->
     <div class="sezioneregali">
         <div class="trova il regalo">
-          <span class="titolo">Find the perfect gift</span>
-          <span class="collegamento">Shop now</span>
+          <span class="titolo1">Find the perfect gift</span>
+          <a class="collegamento1" href="#">Shop now</a>
         </div>
 
-        <div>
+        <div class="quattroimmagini">
            <img class="immagine" src="assets/img_1.jpg"/>
            <img class="immagine" src="assets/img_2.jpg"/>
            <img class="immagine" src="assets/img_3.jpg"/>
            <img class="immagine" src="assets/img_4.jpg"/>
+        </div>
     </div>
 
     <!--Sezione 6 Regali pt2-->
     <div class="sezione regali2">
         <img class="immagine2" src="assets/img_9.png"/>
-        <span class="titolo">Play the gifting game</span>
-          <span class="collegamento">Shop gaming</span>
+        <span class="titolo2">Play the gifting game</span>
+        <a class="collegamento2" href="#">Shop gaming</a>
     </div>
 
     <!--Sezione 7 Regali pt3-->
     <div class="sezione regali3">
         <img class="immagine2" src="assets/img_10.png"/>
-        <span class="titolo">The sound of Cheer</span>
-          <span class="collegamento">Shop audio & Accessories</span>
+        <span class="titolo2">The sound of Cheer</span>
+        <a class="collegamento2" href="#">Shop audio & Accessories</a>
     </div>
 
 </main>
@@ -76,16 +77,16 @@
 <footer>
  <!--Sezione 8 chiusura pagina-->
 
-  <div id="backtotop" class="bg-light-dark">
-     <a class="color-white" href="#">Back to top</a>
+  <div class="backtotop">
+     <a href="#">Back to top</a>
   </div>
 
-  <div id="footerlogo">
-    <img src="assets/logo.png" alt="logo Amazon"/>
+  <div class="footerlogo">
+    <img id="logoamazon2" src="assets/logo.png">
   </div>
   
-
-
+    </div>
+</footer>
     
 </footer>
 </body>
