--- a/Modulo2/s1/g5/S5-P-Medium-Clone-Start/index.html
+++ b/Modulo2/s1/g5/S5-P-Medium-Clone-Start/index.html
@@ -9,7 +9,8 @@
     <title>Medium HomePage</title>
   </head>
 
-  <body>
+  
+<body>
     <header>
       <nav>
         <img src="assets/imgs/svg/logo.svg" alt="logo" />
@@ -9234,6 +9235,9 @@
         </svg>
       </div>
     </header>
+
+
+    <!--PRIMA PARTE DEGLI ARTICLE, 6 ARTICOLI DISPOSTI SU TRE COLONNE -->
     <main>
       <article>
         <div id="article-1">
@@ -9242,224 +9246,201 @@
 
           <div id="articles">
             <div>
-              <div class="number">01</div>
-              <div class="article">
-                <div class="writer">
-                  <img src="assets/imgs/image01.jpeg" alt="jet-fighter" />
-                  <p>Tom Cooper</p>
+                <p class="number">01</p>
+                <div class="article">
+                   <div class="writer">
+                     <img src="assets/imgs/image01.jpeg"/>
+                     <p>Tom Cooper</p>
+                   </div>
+                   <h6>Ukraine War,23 October 2022</h6>
+                   <p class="date">Oct 23 • 5 min read</p>
                 </div>
-                <h6>Ukraine War,23 October 2022</h6>
-                <p class="info">Oct 23 • 5 min read</p>
-              </div>
             </div>
+
+
             <div>
-              <div class="number">02</div>
-              <div class="article">
-                <div class="writer">
-                  <img src="assets/imgs/image02.png" alt="letter e" />
-                  <p>Arthur Hayes in Entreprenuer's Handbook</p>
+                <p class="number">02</p>
+                <div class="article">
+                   <div class="writer">
+                     <img src="assets/imgs/image02.png"/>
+                     <p>Arthur Hayes in Entreprenuer's Handbook</p>
+                   </div>
+                   <h6>Comeback</h6>
+                   <p class="date">Oct 26 • 24 min read</p>
                 </div>
-                <h6>Comeback</h6>
-                <p class="info">Oct 26 • 24 min read</p>
-              </div>
             </div>
+
+
             <div>
-              <div class="number">03</div>
-              <div class="article">
-                <div class="writer">
-                  <img src="assets/imgs/image03.jpeg" alt="logo sj" />
-                  <p>Erin A Ross in Slackjaw</p>
+                <p class="number">03</p>
+                <div class="article">
+                   <div class="writer">
+                     <img src="assets/imgs/image03.jpeg" alt="logo sj" />
+                     <p>Erin A Ross in Slackjaw</p>
+                   </div>
+                   <h6> How I Learned To Love My Breast Even Thought One Is A Horcrux For Voldemort </h6>
+                   <p class="date">Oct 26 • 2 min read</p>
                 </div>
-                <h6>
-                  How I Learned To Love My Breast Even Thought One Is A Horcrux
-                  For Voldemort
-                </h6>
-                <p class="info">Oct 26 • 2 min read</p>
-              </div>
-            </div>
-            <div>
-             
-              </div>
-            </div>
-          </div>
+            </div>    
+              
         </div>
-      </article>
-      <div id="under-articles-container">
-        <div id="recommended-articles-container">
-          <div>
+       </article>
+          <!--FINE PARTE DEGLI ARTICLE, 6 ARTICOLI DISPOSTI SU TRE COLONNE -->
+
+          <!--inizio articoli messi uno sotto l'altro -->
+    <div id="under-articles-container">
+    <div id="recommended-articles-container">
+        <div>
             <div class="article">
                 <div class="writer">
                    <img src="assets/imgs/image07.jpeg"/>
                    <p>Robert Roy Britt</p>
                 </div>
               <h5>How Old Is Old?</h5>
-              <p>
-                What we consider "old" changes dramatically with age, and our
-                perspectives can be predictive of how well we age
-              </p>
-              <div class="under-articles">
-                <p>Oct 13 • 5 min read •</p>
-                <div>Aging</div>
-                <img src="assets/imgs/svg/star.svg" alt="star" />
-                <img
-                  src="assets/imgs/svg/bookmark.svg"
-                  class="bookmark"
-                  alt="bookmark"
-                />
-              </div>
+              <p> What we consider "old" changes dramatically with age, and our perspectives can be predictive of how well we age</p>
+                 <div class="under-articles">
+                   <p class="date">Oct 27 • 5 min read •</p>
+                   <div>Aging</div>
+                   <img src="assets/imgs/svg/star.svg"/>
+                   <img src="assets/imgs/svg/bookmark.svg" class="bookmark"/>
+                </div>
             </div>
-            <img src="assets/imgs/image08.jpeg" alt="differnt ages women" />
-          </div>
-          <div>
+            <img src="assets/imgs/image08.jpeg"/>
+        </div>
+
+
+
+        <div>
             <div class="article">
-              <div class="writer">
-                <img
-                  src="assets/imgs/image09.jpeg"
-                  alt="Taru Anniina Liikanen"
-                />
-                <p>Taru Anniina Liikanen</p>
-              </div>
-              <h5>Is Taylor Swift Allowed to Speak About Fat</h5>
-              <p>
-                Can you speak about your trauma if you don't look traumatized?
-              </p>
-              <div class="under-articles">
-                <p>Oct 24 • 6 min read •</p>
-                <div>Health</div>
-                <img src="assets/imgs/svg/star.svg" alt="star" />
-                <img
-                  src="assets/imgs/svg/bookmark.svg"
-                  class="bookmark"
-                  alt="bookmark"
-                />
-              </div>
+                <div class="writer">
+                   <img src="assets/imgs/image09.jpeg"/>
+                   <p>Taru Anniina Likanen</p>
+                </div>
+                <h5>Is Taylor Swift Allowed to Speak About Fat</h5>
+                <p> Can you speak about your trauma if you don't look traumatized? </p>
+                <div class="under-articles">
+                   <p>Oct 24 • 6 min read •</p>
+                   <div>Health</div>
+                   <img src="assets/imgs/svg/star.svg"/>
+                   <img src="assets/imgs/svg/bookmark.svg"class="bookmark"/>
+                </div>
             </div>
-            <img src="assets/imgs/image10.jpeg" alt="taylor swift performing" />
-          </div>
-          <div>
+            <img src="assets/imgs/image10.jpeg"/>
+        </div>
+
+
+
+
+        <div>
             <div class="article">
-              <div class="writer">
-                <img src="assets/imgs/image11.jpeg" alt="David Rodenas" />
-                <p>David Rodenas, Ph. D.</p>
-              </div>
-              <h5>Don't Screw Up, You Will Be Found Guilty</h5>
-              <p>
-                Software Engineer, yours is the right to produce high-quality
-                work at all times, also the liability.
-              </p>
-              <div class="under-articles">
-                <p>Oct 15 • 5 min read •</p>
-                <div>Software Engineering</div>
-                <img src="assets/imgs/svg/star.svg" alt="star" />
-                <img
-                  src="assets/imgs/svg/bookmark.svg"
-                  class="bookmark"
-                  alt="bookmark"
-                />
-              </div>
+                <div class="writer">
+                   <img src="assets/imgs/image11.jpeg"/>
+                   <p>David Rodenas, Ph. D.</p>
+                </div>
+                <h5>Don't Screw Up, You Will Be Found Guilty</h5>
+                <p> Software Engineer, yours is the right to produce high-quality
+                work at all times, also the liability.</p>
+                <div class="under-articles">
+                   <p>Oct 15 • 5 min read •</p>
+                   <div>Software Engineering</div>
+                   <img src="assets/imgs/svg/star.svg" alt="star" />
+                   <img src="assets/imgs/svg/bookmark.svg" class="bookmark" />
+                </div>
             </div>
-            <img src="assets/imgs/image12.png" alt="men in suits" />
-          </div>
-          <div>
+            <img src="assets/imgs/image12.png"/>
+        </div>
+
+
+
+
+
+        <div>
             <div class="article">
-              <div class="writer">
-                <img src="assets/imgs/image13.png" alt="microsoft logo" />
-                <p>Microsoft Design</p>
-              </div>
-              <h5>Leave No Trace</h5>
-              <p>
-                How product designers can break from the status quo and help our
-                planet
-              </p>
-              <div class="under-articles">
-                <p>Oct 25 • 11 min read •</p>
-                <div>Sustainability</div>
-                <img
-                  src="assets/imgs/svg/bookmark.svg"
-                  class="bookmark"
-                  alt="bookmark"
-                />
-              </div>
+                <div class="writer">
+                   <img src="assets/imgs/image13.png"/>
+                   <p>Microsoft Design</p>
+                </div>
+                <h5>Leave No Trace</h5>
+                 <p> How product designers can break from the status quo and help our
+                planet</p>
+                <div class="under-articles">
+                   <p>Oct 25 • 11 min read •</p>
+                   <div>Sustainability</div>
+                   <img src="assets/imgs/svg/bookmark.svg" class="bookmark"/>
+                </div>
             </div>
-            <img src="assets/imgs/image14.png" alt="landscape" />
-          </div>
-          <div>
+            <img src="assets/imgs/image14.png"/>
+        </div>
+
+
+
+
+        <div>
             <div class="article">
-              <div class="writer">
-                <img src="assets/imgs/image15.jpeg" alt="Scott H. Young" />
-                <p>Scott H. Young</p>
-              </div>
-              <h5>Variability, Not Repetition, is the Key to Mastery</h5>
-              <p>
-                Bruce Lee is reported to have said: "I fear not the man who has
+                <div class="writer">
+                   <img src="assets/imgs/image15.jpeg"/>
+                   <p>Scott H. Young</p>
+                </div>
+                <h5>Variability, Not Repetition, is the Key to Mastery</h5>
+                <p>Bruce Lee is reported to have said: "I fear not the man who has
                 practiced 10,000 kiks once, but the man who has practiced
-                one..."
-              </p>
-              <div class="under-articles">
-                <p>Oct 26 • 7 min read •</p>
-                <div>Learning</div>
-                <img src="assets/imgs/svg/star.svg" alt="star" />
-                <img
-                  src="assets/imgs/svg/bookmark.svg"
-                  class="bookmark"
-                  alt="bookmark"
-                />
-              </div>
+                one..."</p>
+                <div class="under-articles">
+                   <p>Oct 26 • 7 min read •</p>
+                   <div>Learning</div>
+                   <img src="assets/imgs/svg/star.svg"/>
+                   <img src="assets/imgs/svg/bookmark.svg" class="bookmark"/>
+                </div>
             </div>
-            <img src="assets/imgs/image16.jpg" alt="Bruce Lee" />
-          </div>
-          <div>
+            <img src="assets/imgs/image16.jpg" />
+        </div>
+
+
+        <div>
             <div class="article">
-              <div class="writer">
-                <img src="assets/imgs/image17.png" alt="logo" />
-                <p>Paul A. DeStefano in Human Parts</p>
-              </div>
+                <div class="writer">
+                   <img src="assets/imgs/image17.png"/>
+                   <p>Paul A. DeStefano in Human Parts</p>
+                </div>
               <h5>What I Over as an Escape Room Actor</h5>
-              <p>
-                Lock a group of people in a room and you'll witness some
-                surprising confessions
-              </p>
-              <div class="under-articles">
-                <p>Jan 18, 2020 • 6 min read •</p>
-                <div>Experiences</div>
-                <img src="assets/imgs/svg/star.svg" alt="star" />
-                <img
-                  src="assets/imgs/svg/bookmark.svg"
-                  class="bookmark"
-                  alt="bookmark"
-                />
-              </div>
-            </div>
-            <img src="assets/imgs/image18.jpeg" alt="red room" />
-          </div>
-          <div>
+              <p>Lock a group of people in a room and you'll witness some
+                surprising confessions</p>
+                <div class="under-articles">
+                   <p>Jan 18 • 6 min read •</p>
+                   <div>Experiences</div>
+                    <img src="assets/imgs/svg/star.svg"/>
+                    <img src="assets/imgs/svg/bookmark.svg" class="bookmark"/>
+                </div>
+        </div>
+        <img src="assets/imgs/image18.jpeg" />
+        </div>
+
+
+
+
+        <div>
             <div class="article">
-              <div class="writer">
-                <img src="assets/imgs/image19.jpeg" alt="Kim Scott" />
-                <p>Kim Scott</p>
-              </div>
-              <h5>
-                6Steps For settings Measurable Goals to Avoid "Productivity
-                Paranoia"
-              </h5>
-              <p>
-                With more people working in remote and hybrid environments than
+                <div class="writer">
+                  <img src="assets/imgs/image19.jpeg"/>
+                   <p>Kim Scott</p>
+                </div>
+              <h5>6 Steps For settings Measurable Goals to Avoid "Productivity Paranoia" </h5>
+              <p> With more people working in remote and hybrid environments than
                 ever before, company, team and individual goal must be
-                explicit...
-              </p>
-              <div class="under-articles">
-                <p>Oct 25 • 10 min read •</p>
-                <div>Productivity</div>
-                <img
-                  src="assets/imgs/svg/bookmark.svg"
-                  class="bookmark"
-                  alt="bookmark"
-                />
-              </div>
+                explicit....</p>
+            <div class="under-articles">
+               <p>Oct 25 • 10 min read •</p>
+               <div>Productivity</div>
+                <img src="assets/imgs/svg/bookmark.svg" class="bookmark"/>
             </div>
-            <img src="assets/imgs/image08.jpeg" alt="differnt ages women" />
+        </div>
+            <img src="assets/imgs/image08.jpeg" alt="different ages women" />
           </div>
         </div>
+
+        <!--Fine articoli messi uno sotto l'altro -->
+
+<!--Parte Finaleeeee -->
         <aside>
           <div id="aside-container">
             <h4>DISCOVER MORE OF WHAT MATTERS TO YOU</h4>
@@ -9476,21 +9457,20 @@
             </div>
             <div>
               <ul>
-                <li><a href="">Help</a></li>
-                <li><a href="">Status</a></li>
-                <li><a href="">Writers</a></li>
-                <li><a href="">Blog</a></li>
-                <li><a href="">Careers</a></li>
-                <li><a href="">Privacy</a></li>
-                <li><a href="">Terms</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Knowable</a></li>
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Status</a></li>
+                <li><a href="#">Writers</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Knowable</a></li>
               </ul>
             </div>
           </div>
         </aside>
       </div>
     </main>
-    <script src="js/script.js"></script>
   </body>
 </html>
